istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
    - webserver
  http:
    - match:
        - uri:
            regex: ".*"
      rewrite:
        uri: "/data/"
        # Optional
        # authority: data
      route:
        - destination:
            host: data.svc.cluster.local
            port:
              number: 443
